--- a/P1/cv.css
+++ b/P1/cv.css
@@ -1,14 +1,13 @@
-
 * {
     box-sizing: border-box;
   }
-  
+
 body {
-    background-image: url('https://wallpapers.com/images/featured-small/monsters-inc-aa6xascr11wdiocy.webp');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-}
+    background-image: url('https://i.imgur.com/https://i.pinimg.com/736x/5b/9d/2c/5b9d2c4a1716f01700cb2c35a7b7a457.jpg.jpg');
+    background-size: cover; /* Ajusta la imagen al tamaño de la pantalla */
+    background-position: center; /* Centra la imagen */
+    background-attachment: fixed; /* Fija la imagen para que no se desplace */
+} 
 
 /* Crear columnas de ancho diferente que se colocan una a continuación de la otra */
 .columna {
