--- a/P1/cv.css
+++ b/P1/cv.css
@@ -61,7 +61,7 @@ h3 {
 img {
   width: 100%;
   height: 150px;
-  object-fit: cover;
+  object-fit: contain;
   border-radius: 10px;
   margin-bottom: 10px;
 }
