--- a/P1/cv.css
+++ b/P1/cv.css
@@ -85,7 +85,7 @@ img {
 .about-image {
   width: 100%; 
   height: 250px; 
-  object-fit: cover; 
+  object-fit: contain; 
   border-radius: 10px; 
   margin-bottom: 20px; 
 }
